# pim_mapper

./: .gitignore  .latexmkrc  README.md  debug_corrected_formula.py  debug_explain_non_crossing.py  debug_formula_overlap.py  debug_full_ilp_formula.py  debug_gcd.py  debug_ilp_formula_simple.py  debug_ilp_formula_vs_trace.py  debug_ilp_input.py  debug_ilp_medium.py  debug_ilp_vars.py  debug_ilp_vs_trace_analysis.py  debug_input_rows.py  debug_model.lp  debug_model_size.py  debug_new_formula.py  debug_output_tile.py  debug_resnet_1x1_red.py  debug_row_switch_deep.py  debug_trace.txt  debug_trace_only.py  debug_weight_trace.py  experiment_report.aux  experiment_report.out  fix_trace_generator.py  ilp_alignment_results.csv  inspect_layer.py  list_resnet_layers.py  model.ilp  optimization_results.csv  paper_body.aux  paper_body.tex  pim_optimizer_summary.aux  pyproject.toml  reproduce_resnet_l2.py  reproduce_trace_issue.py  requirements.txt  row_activation_cost_table.json  (+14 more)
AlexNet-L1/: analysis.txt
MobileNet-L1/: analysis.txt
ResNet-L1/: analysis.txt
ResNet-L2/: analysis.txt
ResNet-L3/: analysis.txt
VGG-L1/: analysis.txt
docs/: .latexmkrc  ILP_MODEL_INVARIANTS.md  INPUT_ROW_ACTIVATION_FIX.md  context_pack_row_activation_fix.md  current_status.md  dram_latency_model.tex  hw_mapping_order.py  hw_mapping_space.py  hw_mapping_summary.py  hybrid_row_activation_model.tex  ilp_design.py  parallel_for_dataflow_summary.py  pe_array_dataflow_design.md  pim_optimizer_summary.fdb_latexmk  pim_optimizer_summary.fls  pim_optimizer_summary.out  pim_optimizer_summary.tex  (+8 more)
(+499 files in other folders)
