[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pim_optimizer"]

[project]
name = "pim-optimizer"
version = "0.1.0"
authors = [
  { name = "Haochen Zhao" },
]
description = "PIM (Processing-In-Memory) Dataflow Optimization via Integer Linear Programming"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
    "PyYAML>=6",
    "gurobipy>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
pim-opt = "pim_optimizer.cli:main"

[project.urls]
"Homepage" = "https://github.com/haochenzhao/pim-optimizer"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
